# uwloc-db

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: linting.yml  smoke-test.yml  static.yml  testing-and-coverage.yml  type-checking.yml
docs/: conf.py  index.rst
notebooks/: _config.yml  _toc.yml  querydb.ipynb  wavs.ipynb
src/uwloc/data/: main.py  tile.py  wav.py
tests/uwloc/data/: conftest.py  test_import.py  test_wav.py
tests/uwloc_data/: test_example_module.py
