[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "uwloc-data"
license = {file = "LICENSE"}
readme = "README.md"
authors = [
    { name = "University of Washington - SSEC", email = "carlosg@uw.edu" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
]
dynamic = ["version"]
requires-python = ">=3.10"
dependencies = [
    "deprecated",
    "ipykernel", # Support for Jupyter notebooks
    "scipy",
    "tiledb",
    "typer",
    "wavinfo",
    "pandas>=2.0",
]

# On a mac, install optional dependencies with `pip install '.[dev]'` (include the single quotes)
[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov", # Used to report total code coverage
    "pre-commit", # Used to run checks before finalizing a git commit
    "sphinx==6.1.3", # Used to automatically generate documentation
    "sphinx_rtd_theme==1.2.0", # Used to render documentation
    "sphinx-autoapi==2.0.1", # Used to automatically generate api documentation
    "black", # Used for static linting of files
    "mypy", # Used for static type checking of files
    "hatch",
    "matplotlib",
    "jupyter==1.0.0",
    "jupyter-book>=0.15.1",
    "types-pytz",
    "types-python-dateutil",
]
[tool.hatch.version.raw-options]
local_scheme = "no-local-version"

[tool.hatch.build.targets.sdist]
include = [
    "src/uwloc",
]

[tool.hatch.build.targets.wheel]
packages = ["src/uwloc"]

[tool.hatch.version]
source = "vcs"

# [tool.setuptools_scm]
[tool.hatch.build.hooks.vcs]
version-file = "src/uwloc/data/_version.py"

[tool.black]
line-length = 110

[project.scripts]
wavdb = "uwloc.data.main:app"

[tool.mypy]
ignore_missing_imports = true

[tool.isort]
profile = "black"


[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"